# gtcaca

./: .gitignore  CMakeLists.txt  README.md  README.rst  demo.sh  gtcaca.pc.cmake  pyproject.toml  runccm.sh
.github/workflows/: publish-rust-crates.yml  release.yml  windows-library.yml
apps/: CMakeLists.txt  cacamacs.c  cacasheet.c  devhelp.c  rfmind.c  rtodo.c
apps/cacamacs/: cacamacs.c  cacamacs.h  edit.c  games.c  keymap.c  lang.c  search.c  spell.c  theme.c  ui.c
demo/: 2textlists2windows.c  CMakeLists.txt  demo.c  demo_charts.c  demo_colors.c  demo_dash.c  demo_dialogs.c  demo_events.c  demo_gallery.c  demo_login.c  demo_map.c  demo_monitor.c  demo_settings.c  demo_table.c  demo_tabs.c  demo_tree.c  demo_truecolor.c  tcaca.c  textlist.c
docs/: cacamacs.md  ccm-theme.example  editor.md  gtcaca_api.c  gtcaca_api.h  layout.md  widgets_gallery.md
examples/: cacamacs-config.json
examples/cacamacs-extensions/c-lang-0.0.1/: language-configuration.json  package.json
examples/cacamacs-extensions/c-lang-0.0.1/syntaxes/: c.tmLanguage.json
examples/cacamacs-extensions/python-0.0.1/: language-configuration.json  package.json
examples/cacamacs-extensions/python-0.0.1/syntaxes/: python.tmLanguage.json
scripts/: package-cacamacs-macos.sh
scripts/ci/: build-libcaca-win.sh  build-libcaca.sh
src/: CMakeLists.txt  application.c  barchart.c  box.c  button.c  calendar.c  checkbox.c  colordialog.c  combobox.c  custom.c  dialog.c  editor.c  editor_autoc.c  editor_json.c  editor_lang.c  editor_ops.c  editor_search.c  editor_tm.c  editor_view.c  entry.c  expander.c  filechooser.c  frame.c  gauge.c  hexview.c  image.c  iniparse.c  json.c  label.c  linechart.c  log.c  main.c  map.c  menu.c  mindmap.c  piechart.c  progressbar.c  radiobutton.c  scale.c  scatter.c  (+16 more)
src/bindings/python/: .gitignore  CMakeLists.txt  Makefile  README.md  example.py  gtcaca_module.cpp  pyproject.toml
src/bindings/python/gtcaca/: __init__.py
src/bindings/rust/: .gitignore  Cargo.toml  Makefile  README.md
src/bindings/rust/gtcaca/: Cargo.toml  README.md
src/bindings/rust/gtcaca-sys/: Cargo.toml  README.md  build.rs  docsrs-bindings.rs  wrapper.h
src/bindings/rust/gtcaca-sys/src/: lib.rs
src/bindings/rust/gtcaca/doc/: tutorial_mindmap.md  tutorial_spreadsheet.md
src/bindings/rust/gtcaca/examples/: gallery.rs  hello.rs  mindmap.rs  smoke.rs  spreadsheet.rs
src/bindings/rust/gtcaca/src/: lib.rs  widgets.rs
src/bindings/rust/scripts/: gen-docsrs-bindings.sh  sync-sources.sh
src/include/gtcaca/: application.h  barchart.h  box.h  button.h  calendar.h  checkbox.h  colordialog.h  combobox.h  custom.h  dialog.h  editor.h  entry.h  expander.h  filechooser.h  frame.h  gauge.h  hexview.h  image.h  iniparse.h  json.h  label.h  linechart.h  log.h  main.h  map.h  menu.h  mindmap.h  piechart.h  progressbar.h  radiobutton.h  scale.h  scatter.h  segdisplay.h  separator.h  sparkline.h  spinbutton.h  spinner.h  statusbar.h  switch.h  table.h  (+9 more)
tests/: 2textlists2windows.c  CMakeLists.txt  button.c  demo_json.c  demo_login.c  image.c  keytest.c  simple.c  simple_layout.c  textlist.c  widgets.c
themes/: default  default.ini
tools/: gen_docs.py
